styles/base.css
* {
  padding: 0;
  margin: 0;
  box-sizing: border-box;
  text-decoration: none;
}

body {
  background-color: #f6f7f8;
  font-family: 'Open Sans', sans-serif;
  display: flex;
  overflow: hidden;
}

input,
button,
textarea {
  font-family: inherit;
}

input,
textarea {
  &::placeholder {
    color: #d1d1d1;
  }

  &:focus {
    outline: none;
  }

  border: none;
}

input[type='checkbox'] {
  border: 1px solid var(--color-black-light);
  accent-color: var(--color-black-light);
  width: 15px;
  height: 15px;
  cursor: pointer;

  &:focus {
    outline: none;
  }
}

button {
  cursor: pointer;
  border: none;
}

.items-end {
  align-items: flex-end;
}

.app-main {
  width: calc(100% - 230px);
  height: 100vh;
  overflow-y: scroll;
  overflow-x: hidden;
  display: flex;
  flex-direction: column;

  &::-webkit-scrollbar {
    display: none;
  }

  header {
    display: flex;
    justify-content: space-between;
    align-items: center;
    position: absolute;
    z-index: 500;
    position: relative;
    width: 100%;
    max-height: 100px;
    min-height: 100px;
    background-color: #fff;
    box-shadow: 0px 4px 4px 0px #0000001a;
    padding: 0 5.2rem;

    .profile {
      display: flex;
      align-items: center;
      justify-content: flex-end;
      width: 100%;
      column-gap: 0.8rem;

      span {
        display: flex;
        justify-content: center;
        align-items: center;
        border: 3px solid #2a3647;
        width: 50px;
        height: 50px;
        color: #29abe2;
        border-radius: 50%;
        font-size: 1.2rem;
        cursor: pointer;
        user-select: none;

        &:hover {
          background-color: #f6f7f8;
        }
      }

      .help-icon {
        cursor: pointer;

        &:hover {
          transform: scale(1.1);
        }
      }
    }

    .header-menu {
      position: absolute;
      right: 0;
      width: 140px;
      transform: translateY(100%);
      background-color: var(--color-blue);
      border-radius: 20px 0 20px 20px;
      padding: 0.8rem 0;
      display: none;
      flex-direction: column;

      a {
        width: 100%;
        height: 40px;
        text-decoration: none;
        color: #a4a7ac;
        white-space: nowrap;
        display: flex;
        align-items: center;
        justify-content: center;

        &:hover {
          background-color: var(--color-blue);
        }
      }
    }
  }

  .container {
    display: flex;
    flex-direction: column;
    margin: 25px 75px;
    max-width: 1440px;
    position: relative;
  }
}

.primary-button {
  background-color: #2a3647;
  color: #ffffff;
  display: flex;
  align-items: center;
  column-gap: 12px;
  font-size: 21px;
  padding: 12px;
  border-radius: 10px;
  cursor: pointer;
  border: none;
  transition: all 0.2s;
  white-space: nowrap;

  &:hover {
    background-color: #29abe2;
    box-shadow: 0px 4px 4px 0px #0000001a;
    transform: scale(1.01);
  }

  &:active {
    transform: scale(0.98);
  }

  img {
    width: 18px;
  }
}

.clear-and-create-button {
  display: flex;
  justify-content: space-around;
  align-items: center;
  height: 50px;
  width: 170px;
  border-radius: 12px;
  font-weight: bold;
  font-size: 18px;
  padding: 12px;
}

.clear-button {
  background-color: white;
  border: 1px solid var(--color-black-light);
  transition: scale 0.2s;

  &:hover {
    scale: 1.05;
    border-color: var(--color-light-blue);
    color: var(--color-light-blue) !important;
  }
}

.text-center {
  text-align: center;
}

.pointer {
  cursor: pointer;
}

.w-100 {
  width: 100%;
}

.h-100 {
  height: 100vh;
}

.h-50 {
  height: 3.1rem;
}

.h-34 {
  height: 34px;
}

.g_12 {
  gap: 12px;
}

.g_18 {
  gap: 18px;
}

.g_48 {
  gap: 48px;
}

.bold {
  font-weight: bold;
}

.p_12 {
  padding: 12px 0px;
}

.f_s_26 {
  font-size: 26px;
}

.f_s_58 {
  font-size: 58px;
}

.f_s_xxl {
  font-size: xxx-large;
}

.mt-32 {
  margin-top: 32px;
}

.mt-80 {
  margin-top: 80px;
}

.ml-28 {
  margin-left: 28px;
}

.input-font {
  font-size: 20px;
  border-radius: 12px;
  padding: 6px 18px;
}

.margin-auto {
  margin: auto;
}

.default-border {
  border: 1px solid #ccc;
}

.show-element {
  display: flex !important;
}

.show-modal {
  opacity: 1 !important;
  visibility: visible !important;
  pointer-events: auto !important;
}

.primary-title {
  font-size: 61px;
  margin-bottom: 38px;
}

.subtitle {
  font-size: 27px;
  margin-bottom: 12px;

  & + p {
    font-size: 16px;
  }
}

.d_none {
  display: none;
}

.headline {
  display: flex;
  flex-direction: row;
  width: 100%;
  justify-content: space-between;
  align-items: center;
  a {
    height: 100%;
    display: flex;
    align-items: center;
  }
}

.back-button {
  z-index: 1000;
  transition: transform 0.2s ease;
  border-radius: 24px;
}

.back-button:hover {
  transform: scale(1.2);
  cursor: pointer;
  background-color: #f6f7f8;
}

.hide-overflow {
  overflow: hidden;
}

.selected-contact {
  background-color: #2a3647 !important;
  color: #fff;
}

.rotate-180-deg {
  transform: rotate(180deg);
}

.add-task-title{
  margin-bottom: 12px;
}

